--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.CalorieDiary"
         tools:targetApi="31">
         <activity
-            android:name=".User_Enter_Height"
+            android:name=".Rm_Calc"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
