theoretically api works without edits 16/5/24 23/49

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-crashlytics'
     //apis
     implementation 'com.loopj.android:android-async-http:1.4.9'
+    implementation 'org.apache.commons:commons-lang3:3.12.0'
 
 
 
