--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,10 +5,12 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.requestLegacyExternalStorage"/>
+    <uses-permission android:name="android.permission.requestLegacyExternalStorage" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-feature android:name="android.hardware.camera" android:required="true" />
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="true" />
 
     <application
         android:allowBackup="true"
@@ -20,6 +22,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CalorieDiary"
         tools:targetApi="31">
+        <activity
+            android:name=".RecyclerView.recyclerview"
+            android:exported="false"
+            android:label="@string/title_activity_recyclerview" />
+        <activity
+            android:name=".Recycler_View.item_layout"
+            android:exported="false"
+            android:label="@string/title_activity_item_layout" />
 
         <provider
             android:name="androidx.core.content.FileProvider"
@@ -30,7 +40,6 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths" />
         </provider>
-
 
         <activity
             android:name=".Coming_Soon"
