--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,9 @@
         android:theme="@style/Theme.CalorieDiary"
         tools:targetApi="31">
         <activity
+            android:name=".Bmi_Calc.OptionForBmi"
+            android:exported="false" />
+        <activity
             android:name=".RecyclerView.recyclerview"
             android:exported="false"
             android:label="@string/title_activity_recyclerview" />
