--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,14 +25,18 @@
         tools:targetApi="31">
         <activity
             android:name=".Bmi_Calc.OptionForBmi"
+            android:screenOrientation="portrait"
             android:exported="false" />
+
         <activity
             android:name=".RecyclerView.recyclerview"
             android:exported="false"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_recyclerview" />
         <activity
             android:name=".Recycler_View.item_layout"
             android:exported="false"
+            android:screenOrientation="portrait"
             android:label="@string/title_activity_item_layout" />
 
         <provider
@@ -47,16 +51,20 @@
 
         <activity
             android:name=".Coming_Soon"
+            android:screenOrientation="portrait"
             android:exported="false" />
 
         <activity
             android:name=".Api_Refactored.Camera"
+            android:screenOrientation="portrait"
             android:exported="false" />
         <activity
             android:name=".Api_Refactored.MainActivity2"
+            android:screenOrientation="portrait"
             android:exported="false" />
         <activity
             android:name=".Info"
+            android:screenOrientation="portrait"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
@@ -64,6 +72,7 @@
         </activity>
         <activity
             android:name=".Calorie_Homepage"
+            android:screenOrientation="portrait"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
@@ -71,6 +80,7 @@
         </activity>
         <activity
             android:name=".Bmi_Calc.Enter_Weight"
+            android:screenOrientation="portrait"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
@@ -78,6 +88,7 @@
         </activity>
         <activity
             android:name=".Bmi_Calc.Enter_Height"
+            android:screenOrientation="portrait"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
@@ -85,6 +96,7 @@
         </activity>
         <activity
             android:name=".Creating_Account_And_Login.Login"
+            android:screenOrientation="portrait"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
@@ -92,6 +104,7 @@
         </activity>
         <activity
             android:name=".Database.Database"
+            android:screenOrientation="portrait"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
@@ -99,6 +112,7 @@
         </activity>
         <activity
             android:name=".Creating_Account_And_Login.Create_Account"
+            android:screenOrientation="portrait"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
@@ -106,6 +120,7 @@
         </activity>
         <activity
             android:name=".Creating_Account_And_Login.MainActivity"
+            android:screenOrientation="portrait"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
