--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,13 @@
             android:exported="false"
             android:screenOrientation="portrait"
             android:label="@string/title_activity_recyclerview" />
+
+        <activity
+            android:name=".RecyclerView.Lunch_RecyclerView"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:label="@string/title_activity_recyclerview" />
+
         <activity
             android:name=".Recycler_View.item_layout"
             android:exported="false"
